--- a/style.css
+++ b/style.css
@@ -92,23 +92,91 @@ h3 {
     margin-bottom: 30px;
 }
 
-#win95 img {
-    height: 3rem;
-}
-#win95p {
+
+.photo section {
     max-width: 600px;
 }
 
+.photo > h3 {
+    margin-bottom: 50px;
+    margin-left: 25%;
+}
+
+#win95p {
+    width: 100%;
+    margin: 10px 0;
+    display: none;
+}
+
+#gamep {
+    display: none;
+}
 #gamep img {
     display: block;
-    max-width: 600px;
+    width: 100%;
     margin: 10px 0;
 }
 
 #dogp {
-    max-width: 600px;
+    width: 100%;
+    margin: 10px 0;
+    display: none;
 }
 
 #motop {
-    max-width: 600px;
+    width: 100%;
+    margin: 10px 0;
+    display: none;
+}
+
+
+.skill h3 {
+    margin: 50px auto 20px 25%;
+}
+
+.skls li {
+    padding: 5px 10px;
+    margin: 20px 20px;
+    background-color: green;
+    color: white;
+    box-shadow: 3px 5px rgb(0, 0, 0);
+}
+
+
+#collect {
+    width: 80%;
+    text-align: center;
+}
+
+#coll {
+    margin: 50px auto 20px;
+}
+
+#collp {
+    width: 100%;
+    display: none;
+}
+
+#collp a {
+    text-decoration: none;
+    color: white;
+    background-color: gray;
+    padding: 5px 10px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 2px black;
+}
+#collp a:hover {
+    font-size: 1rem;
+    background-color: black;
+    color: lightblue;
+    transition: all 1s linear;
+}
+#collp ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 150px);
+    grid-auto-rows: 50px;
+    
+    justify-content: center;
+
+    align-content: center;
 }
