--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ h3 {
 }
 
 #coll {
-    margin: 50px auto 20px;
+    margin: 100px auto 50px -30%;
 }
 
 #collp {
@@ -179,4 +179,11 @@ h3 {
     justify-content: center;
 
     align-content: center;
+}
+
+
+footer {
+    margin: 200px auto 10px;
+    width: 100%;
+    text-align: center;
 }
