--- a/style.css
+++ b/style.css
@@ -22,6 +22,23 @@ header {
     height: 80px;
     align-items: center;
 }
+@media screen and (max-width: 480px) {
+    header {
+        display: block;
+        height: auto;
+    }
+    header ul {
+        margin: 10px auto;
+    }
+    #light {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+    }
+    .mepic img {
+        margin-top: 35px;
+    }
+}
 
 ul li {
     display: inline-block;
